--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -3,14 +3,12 @@
 <html>
   <head>
     <title>Django blog</title>
-    <link href="https://fonts.googleapis.com/css?family=\
-    Source+Sans+Pro:400" rel="stylesheet">
-    <link href="{% static 'css/base.css' %}"
-
-rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesh\
+eet">
+    <link href="{% static 'css/base.css' %}" rel="stylesheet"s>
   </head>
   <body>
-    <div>
+<div>
       <header>
         <div class="nav-left">
           <h1><a href="{% url 'home' %}">Django blog</a></h1>
@@ -19,8 +17,16 @@ rel="stylesheet">
           <a href="{% url 'post_new' %}">+ New Blog Post</a>
         </div>
       </header>
-      {% block content %}
-      {% endblock content %}
+      {% if user.is_authenticated %}
+        <p>Hi {{ user.username }}!</p>
+        <p><a href="{% url 'logout' %}">Log out</a></p>
+
+      {% else %}
+        <p>You are not logged in.</p>
+        <a href="{% url 'login' %}">Log In</a>
+      {% endif %}
+    {% block content %}
+    {% endblock content %}
     </div>
   </body>
 </html>
