--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -3,12 +3,11 @@
 <html>
   <head>
     <title>Django blog</title>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesh\
-eet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
     <link href="{% static 'css/base.css' %}" rel="stylesheet"s>
   </head>
   <body>
-<div>
+    <div>
       <header>
         <div class="nav-left">
           <h1><a href="{% url 'home' %}">Django blog</a></h1>
@@ -20,7 +19,6 @@ eet">
       {% if user.is_authenticated %}
         <p>Hi {{ user.username }}!</p>
         <p><a href="{% url 'logout' %}">Log out</a></p>
-
       {% else %}
         <p>You are not logged in.</p>
         <a href="{% url 'login' %}">Log In</a>
